deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: default
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
